# lynora

./: .gitignore  Cargo.toml  README.md
apps/lynora-desktop/: README.md  index.html  package-lock.json  package.json
apps/lynora-desktop/src/: main.ts  styles.css
apps/lynora-desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/lynora-desktop/src-tauri/src/: lib.rs  main.rs
apps/lynora-sync-server/: Cargo.toml
apps/lynora-sync-server/src/: main.rs
apps/lynora-web/: README.md  index.html  package-lock.json  package.json
apps/lynora-web/src/: main.ts  styles.css
crates/lynora-cli/: Cargo.toml
crates/lynora-cli/src/: main.rs
crates/lynora-core/: Cargo.toml
crates/lynora-core/src/: auth.rs  codegen.rs  collection.rs  environment.rs  error.rs  graphql.rs  grpc.rs  history.rs  lib.rs  realtime.rs  rest.rs  vars.rs  workspace.rs
crates/lynora-core/src/import/: mod.rs  openapi.rs  postman.rs  proto.rs
crates/lynora-core/tests/fixtures/: postman_simple.json
crates/lynora-sync/: Cargo.toml
crates/lynora-sync/src/: lib.rs
docs/superpowers/plans/: 2026-07-22-lynora-0.1-core-rest.md  2026-07-22-lynora-0.2-auth-graphql-codegen.md  2026-07-22-lynora-0.3-grpc-openapi.md  2026-07-22-lynora-0.4-web-sync.md  2026-07-22-lynora-0.5-cli-realtime.md
docs/superpowers/specs/: 2026-07-22-lynora-design.md
