[workspace]
resolver = "2"
members = [
    "crates/lynora-core",
    "crates/lynora-sync",
    "crates/lynora-cli",
    "apps/lynora-desktop/src-tauri",
    "apps/lynora-sync-server",
]

[workspace.package]
version = "0.5.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/mfahmirukman/lynora"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "io-util"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
rusqlite = { version = "0.32", features = ["bundled"] }
tempfile = "3"
dirs = "6"
base64 = "0.22"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
rand = "0.8"
url = "2"
aws-sigv4 = "1.2"
aws-credential-types = "1.2"
http = "1"
tonic = { version = "0.12", features = ["transport"] }
prost = "0.13"
prost-types = "0.13"
prost-reflect = { version = "0.14", features = ["serde"] }
protox = "0.7"
bytes = "1"
tokio-stream = "0.1"
axum = "0.7"
tower-http = { version = "0.6", features = ["cors"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
