[package]
name = "lynora-sync-server"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Self-hosted Lynora collection sync API"

[[bin]]
name = "lynora-sync-server"
path = "src/main.rs"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rusqlite = { workspace = true }
uuid = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
chrono = { workspace = true }
lynora-sync = { path = "../../crates/lynora-sync" }
