[package]
name = "lynora-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core library for the Lynora API workbench"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
rusqlite = { workspace = true }
dirs = { workspace = true }
base64 = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
url = { workspace = true }
aws-sigv4 = { workspace = true }
aws-credential-types = { workspace = true }
http = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
prost-reflect = { workspace = true }
protox = { workspace = true }
bytes = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
tokio-stream = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
