[package]
name = "lynora-desktop"
version = "0.1.0"
description = "Lynora API workbench desktop shell"
authors = ["mfahmirukman"]
edition = "2021"

[lib]
name = "lynora_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lynora-core = { path = "../../../crates/lynora-core" }
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
